<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.User"
    android:background="@drawable/background_app"
    android:layoutAnimation="@anim/layout_anim"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_client"
        android:padding="7sp"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_list_view"
        android:textSize="30sp"
        android:letterSpacing="0.1" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_margin="10sp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/myColorGreenDark"
        app:hintTextColor="@color/myColorGreenDark"
        app:startIconDrawable="@drawable/person"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:startIconTint="@color/black"
        android:animateLayoutChanges="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="25"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textColorHint="@color/black"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:boxStrokeColor="#00796B"
        app:hintTextColor="#00796B"
        app:startIconDrawable="@drawable/money"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:endIconMode="clear_text"
        app:startIconTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:counterMaxLength="3"
            android:maxLength="3"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:layout_margin="10sp"
        app:boxStrokeColor="#00796B"
        android:textColorHint="@color/black"
        app:hintTextColor="#00796B"
        app:startIconDrawable="@drawable/gender"
        app:startIconTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/EditTextGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/men"
            android:inputType="none"
            android:textSize="20sp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/year"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/numberPickerYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/month"
                android:textColor="@color/black"
                android:fontFamily="@font/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/numberPickerMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/numberPickerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/numberPickerHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnOk"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:backgroundTint="@color/myColorGreenDark"
        android:layout_margin="15sp"/>

</LinearLayout>