<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/background_item_view"
    android:backgroundTint="@color/teal_700"
    android:id="@+id/bottom_sheet_remove"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/close_bottom_sheet_remove"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/close"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_margin="5sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_bottom_sheet_remove_No"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no"
            android:layout_weight="1"
            android:layout_marginEnd="5sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/remove_bottom_sheet_remove_Yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yes"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>