<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@drawable/background_item_view"
    android:id="@+id/bottom_sheet_design"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/close"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_margin="10sp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/myColorGreenDark"
        app:hintTextColor="@color/myColorGreenDark"
        app:startIconDrawable="@drawable/person"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:startIconTint="@color/black"
        android:animateLayoutChanges="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_margin="10sp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/myColorGreenDark"
        app:hintTextColor="@color/myColorGreenDark"
        app:startIconDrawable="@drawable/money"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:startIconTint="@color/black"
        android:animateLayoutChanges="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLength="3"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/year"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/newYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/month"
                android:textColor="@color/black"
                android:fontFamily="@font/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/newMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/newDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour"
                android:gravity="center"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <NumberPicker
                android:id="@+id/newHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_bg"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_ok_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>
</LinearLayout>